--- a/day1_activity/basic.css
+++ b/day1_activity/basic.css
@@ -1,3 +1,12 @@
+html {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 16pt;
+}
+
+code {
+  font-family: 'Courier New', Courier, monospace;
+}
+
 h1 {
   text-align: center;
 }
