--- a/react-example/src/app/components/App.css
+++ b/react-example/src/app/components/App.css
@@ -22,7 +22,7 @@ body {
 }
 
 .boundary {
-    width: 800px;
+    width: 80%;
     height: 600px;
     position: relative;
     border: 3px solid black;
